-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: qpid-cpp-1.36.0
-
Fix Version/s: qpid-cpp-1.37.0
-
Component/s: C++ Client
-
Labels:None
A prototype socket is create for every client ssl socket, even though that prototype socket is actually only needed/used for server sockets. The prototype socket is not closed when the SslSocket instance is closed.
- duplicates
-
QPID-7688 SSL connections leak file descriptors
-
- Closed
-