QPID-7693: avoid creating prototype until listen() is called